force-app/main/default/objects/Eligibility_Allocated_Vaccine__c/Eligibility_Allocated_Vaccine__c.object-meta.xml
<CustomObject>
    <label>Eligibility Allocated Vaccine</label>
    <nameField>
        <label>Eligibility Vaccine Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligibility Allocated Vaccines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>