force-app/main/default/objects/Eligibility_Allocated_Vaccine__c/fields/Eligibility_Vaccine_Group__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Vaccine_Group__c</fullName>
    <label>Eligibility Vaccine Group</label>
    <referenceTo>Eligibility_Vaccine_Group__c</referenceTo>
    <relationshipLabel>Allocated Vaccines</relationshipLabel>
    <relationshipName>Allocated_Vaccines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>