force-app/main/default/objects/Eligibility_Allocated_Vaccine__c/fields/Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Vaccine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vaccine</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Eligibility Allocated Vaccines</relationshipLabel>
    <relationshipName>Eligibility_Allocated_Vaccines</relationshipName>
    <type>Lookup</type>
</CustomField>